--- a/public/solicitacao.html
+++ b/public/solicitacao.html
@@ -6,25 +6,37 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="../css/main2.css">
+  <link rel="stylesheet" href="../css/sidebar.css">
 </head>
 <body>
 
   <!-- Header -->
-  <nav class="navbar navbar-light bg-light" style="background-color: #32F288">
-    <a class="navbar-brand" style="font-size:80px;">UNIBUY</a>
-    <form class="form-inline">
-      <p>User ID</p>
-    </form>
-  </nav>
+  <nav class="navbar navbar-light bg-light navbar-fixed-top" style="min-height: 2vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  border-bottom: 0.1vh solid #ccc;
+  background: #ECECEC;
+  background-color: #111;
+  z-index: 2;">
+  <img src="../Images/unimed_cascavel.png" alt="">
+  <a class="navbar-brand" style="font-size=80vh;">UNIBUY</a>
+  <form class="form-inline">
+    <p>User ID</p>
+  </form>
+</nav>
 
-  <!-- Sidebar -->
-  <div class="w3-sidebar w3-light-grey w3-align-middle" style="margin-right:1px">
-    <a style="text-align: center;" href="solicitacao.html" class="w3-bar-item w3-button">Solicitar pedido</a>
-    <a style="text-align: center;" href="acompanhar.html" class="w3-bar-item w3-button">Acompanhar pedidos</a>
-    <a style="text-align: center;" href="cadastro.html" class="w3-bar-item w3-button">Cadastro de produtos</a>
-    <a style="text-align: center;" href="ocorrencia.html" class="w3-bar-item w3-button">Ocorrência</a>
-  </div>
 
+<div id="mysidenavxD" style="width: 30vh; marginLeft: 25vh; diplay:inline-block;" class="sidenavxD">
+  <a href="solicitacao.html">Solicitar pedido</a>
+  <a href="acompanhar.html">Acompanhar pedido</a>
+  <a href="cadastro.html">Cadastro de produtos</a>
+  <a href="ocorrencia.html">Ocorrências</a>
+</div>
+
+  <!-- Normal content  -->
   <!-- Normal content  -->
   <div class="container" style="position: relative; left:10%;">
 
@@ -54,7 +66,7 @@
 
           </div>
 
-          <br>Descrição: <br><input id="obs" type="text" class="col-md-8" n ame="Descricao" style="height: 120px;"><br><br>
+          <br>Descrição: <br><input id="obs" type="text" class="col-md-8" n ame="Descricao" style="height: 12vh;"><br><br>
           <button class="btn" type="button" name="button" onclick="solicitar();">Solicitar</button>
         </li>
       </ul>
@@ -73,5 +85,6 @@
     <script src="../js/app.js">  </script>
 
     <script src="../js/solicitacao.js"></script>
+
   </body>
   </html>
