--- a/public/acompanhar.html
+++ b/public/acompanhar.html
@@ -7,12 +7,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
+
 </head>
 <body>
 
   <!-- Header -->
   <nav class="navbar navbar-light bg-light" style="background-color: #32F288">
-    <img src="../../Images/unimed_cascavel.png" alt="">
+    <img src="../Images/unimed_cascavel.png" alt="">
     <a class="navbar-brand" style="font-size=80px;">UNIBUY</a>
     <form class="form-inline">
       <p>User ID</p>
@@ -32,7 +33,7 @@
   <!-- Normal content  -->
   <div id="page-wrapper" class="container">
     <div class="row">
-      <div class="col-lg-12">
+      <div class="offset-2 col-lg-10">
         <h1 class="page-header">Chamados</h1>
         <select class="" name="Setor" style="margin:1%" style="padding-right:1%" onchange="location = this.value;" >
           <option value=""> Setor</option>
@@ -54,36 +55,23 @@
     </div>
     <!-- /.row -->
     <div class="row">
-      <div class="col-lg-12">
+      <div class="offset-2 col-lg-10" style="padding-left: 3.5vh">
         <div class="panel panel-default">
           <div class="panel-heading">
             Chamados
           </div>
           <!-- /.panel-heading -->
           <div class="panel-body">
-            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+            <table width="100%" class="table table-striped table-bordered table-hover" id="datatables">
               <thead>
                 <tr>
-                  <th>N°Pedido</th>
-                  <th>Descrição</th>
-                  <th>Data</th>
+                  <th>Setor</th>
                   <th>Prazo de entrega</th>
-                  <th>Colaborador</th>
-                  <th>Nome</th>
+                  <th>Solicitante</th>
+                  <th>Responsável</th>
 
                 </tr>
-              </thead>
-              <tbody>
-                <tr class="odd gradeX">
-                  <td>1</td>
-                  <td>Caneta</td>
-                  <td>12/05/2018</td>
-                  <td>23/08/2018</td>
-                  <td >Marcos</td>
-                  <td >Cristiane</td>
-                </tr>
-                </tr>
-              </tbody>
+              </thead>>
             </table>
 
           </div>
@@ -94,7 +82,19 @@
       <!-- /.col-lg-12 -->
     </div>
     <!-- /.row -->
-    <div class="row">
+
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script><!-- Firebase App is always required and must be first -->
+      <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-app.js"></script>
+    
+      <!-- Add additional services that you want to use -->
+      <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-auth.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-database.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-firestore.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-messaging.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-functions.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <script src="../js/app.js">  </script>
+      <script src="../js/acompanhar.js"></script>
 
     </body>
     </html>
