--- a/Site_upload/HTML/acompanhar.html
+++ b/Site_upload/HTML/acompanhar.html
@@ -67,101 +67,22 @@
           </div>
           <!-- /.panel-heading -->
           <div class="panel-body">
-            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+            <table width="100%" class="table table-striped table-bordered table-hover" id="datatables">
               <thead>
                 <tr>
-                  <th>N°Pedido</th>
-                  <th>Descrição</th>
-                  <th>Data</th>
+                  <th>Setor</th>
                   <th>Prazo de entrega</th>
-                  <th>Colaborador</th>
-                  <th>Nome</th>
+                  <th>Solicitante</th>
+                  <th>Responsável</th>
 
                 </tr>
               </thead>
               <tbody>
-                <tr class="odd gradeX">
-                  <td>1</td>
-                  <td>Caneta</td>
-                  <td>12/05/2018</td>
-                  <td>23/08/2018</td>
-                  <td >Marcos</td>
-                  <td >Cristiane</td>
-                </tr>
-                <tr class="even gradeC" >
-                  <td>2</td>
-                  <td><a href="https://www.google.com.br/search?q=caderno&rlz=1C1CHZL_pt-BRBR787BR787&source=lnms&tbm=isch&sa=X&ved=0ahUKEwi-tumvi5XeAhWMnJAKHfpSCTwQ_AUIDigB&biw=1360&bih=626#imgrc=LykY7MmycemOnM:">Caderno</a> </td>
-                  <td>25/06/2018</td>
-                  <td>02/09/2018</td>
-                  <td>Marcia</td>
-                  <td>Cristiane</td>
-
-                </tr>
-                <tr class="odd gradeA">
-                  <td>2</td>
-                  <td>Caderno</td>
-                  <td>25/06/2018</td>
-                  <td>02/09/2018</td>
-                  <td>Marcia</td>
-                  <td>Cristiane</td>
-                </tr>
-                <tr class="even gradeA">
-                  <td>2</td>
-                  <td>Caderno</td>
-                  <td>25/06/2018</td>
-                  <td>02/09/2018</td>
-                  <td>Marcia</td>
-                  <td>Cristiane</td>
-                </tr>
-                <tr class="odd gradeA">
-                  <td>2</td>
-                  <td>Caderno</td>
-                  <td>25/06/2018</td>
-                  <td>02/09/2018</td>
-                  <td>Marcia</td>
-                  <td>Cristiane</td>
-                </tr>
-                <tr class="even gradeA">
-                  <td>2</td>
-                  <td>Caderno</td>
-                  <td>25/06/2018</td>
-                  <td>02/09/2018</td>
-                  <td>Marcia</td>
-                  <td>Cristiane</td>
-                </tr>
                 <tr class="gradeA">
                   <td>2</td>
-                  <td>Caderno</td>
-                  <td>25/06/2018</td>
                   <td>02/09/2018</td>
                   <td>Marcia</td>
                   <td>Cristiane</td>
-                </tr>
-                <tr class="gradeA">
-                  <td>2</td>
-                  <td>Caderno</td>
-                  <td>25/06/2018</td>
-                  <td>02/09/2018</td>
-                  <td>Marcia</td>
-                  <td>Cristiane</td>
-                </tr>
-                <tr class="gradeA">
-                  <td>2</td>
-                  <td>Caderno</td>
-                  <td>25/06/2018</td>
-                  <td>02/09/2018</td>
-                  <td>Marcia</td>
-                  <td>Cristiane</td>
-                </tr>
-                <tr class="gradeA">
-                  <td>2</td>
-                  <td>Caderno</td>
-                  <td>25/06/2018</td>
-                  <td>02/09/2018</td>
-                  <td>Marcia</td>
-                  <td>Cristiane</td>
-
-
                 </tr>
               </tbody>
             </table>
@@ -176,5 +97,17 @@
     <!-- /.row -->
     <div class="row">
 
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script><!-- Firebase App is always required and must be first -->
+      <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-app.js"></script>
+    
+      <!-- Add additional services that you want to use -->
+      <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-auth.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-database.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-firestore.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-messaging.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-functions.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <script src="../../js/app.js">  </script>
+      <script src="../../js/acompanhar.js"></script>      
     </body>
     </html>
