--- a/public/acompanhar.html
+++ b/public/acompanhar.html
@@ -64,7 +64,7 @@
           <div class="panel-body">
             <table width="100%" class="table table-striped table-bordered table-hover" id="datatables">
               <thead>
-                <tr>
+                <tr onclick="alert()">
                   <th>Setor</th>
                   <th>Prazo de entrega</th>
                   <th>Solicitante</th>
@@ -85,7 +85,7 @@
 
       <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script><!-- Firebase App is always required and must be first -->
       <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-app.js"></script>
-    
+
       <!-- Add additional services that you want to use -->
       <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-auth.js"></script>
       <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-database.js"></script>
@@ -98,4 +98,3 @@
 
     </body>
     </html>
-
