--- a/Site_upload/HTML/formulario.html
+++ b/Site_upload/HTML/formulario.html
@@ -53,6 +53,8 @@
           <input class="form-control" id="disabledInput" type="text" placeholder="dado BD" disabled>
           <label for="disabledSelect">Aberto Por</label>
           <input class="form-control" id="disabledInput" type="text" placeholder="dado BD" disabled>
+          <label for="disabledSelect">Descrição</label>
+          <input class="form-control" id="disabledInput" type="text" placeholder="dado BD"  style="padding:10%">
         </fieldset>
         <br>
         <div class="" style="display: flex; position: inline-block">
@@ -92,8 +94,6 @@
 
       <div class="col-lg-6" style="left: 1%">
         <div class="form-group">
-          <label for="disabledSelect">Área Responsável</label>
-          <input class="form-control" id="disabledInput" type="text" placeholder="dado BD" disabled>
           <label for="disabledSelect">Anexo</label>
           <input class="form-control" id="disabledInput" type="text" placeholder="dado BD" disabled>
 
