--- a/Site_upload/HTML/ocorrencia.html
+++ b/Site_upload/HTML/ocorrencia.html
@@ -49,8 +49,13 @@
   <div class="col-lg-6" style="left: 1%">
 
     <form role="form" action="">
-      <fieldset disabled>
+      <fieldset>
         <div class="form-group">
+          <select>
+            <option>Produto 1</option>
+            <option>Produto 2</option>
+            <option>Produto 3</option>
+          </select><br><br>
           <label for="disabledSelect">Numero Pedido</label>
           <input class="form-control" id="disabledInput" type="text" placeholder="dado BD" disabled>
           <label for="disabledSelect">Data</label>
@@ -65,7 +70,7 @@
 
 
         <div class="form-group">
-          
+
         </div>
 
 
@@ -108,7 +113,7 @@
           </div>
         </div>
 
-        <button type="button" name="button" onclick="funcao()">Enviar</button>
+        <button type="button" name="button" onclick="sendTo()">Enviar</button><script type="text/javascript"></script>
       </div>
       <footer>
       </footer>
