--- a/Site_upload/HTML/solicitacao.html
+++ b/Site_upload/HTML/solicitacao.html
@@ -8,21 +8,28 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="../CSS/main2.css">
   <link rel="stylesheet" href="../CSS/sidebar.css">
+
 </head>
 <body>
 
   <!-- Header -->
-  <nav class="navbar navbar-light bg-light navbar-fixed-top" style="min-height: 60px;
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  border-bottom: 1px solid #ccc;
-  background: #ECECEC;
-  background-color: #111;
-  z-index: 2;">
-  <img src="../../Images/unimed_cascavel.png" alt="">
-  <a class="navbar-brand" style="font-size=80px;">UNIBUY</a>
+  <div class="" style="display:inline-block">
+    <nav class="navbar navbar-light bg-light navbar-fixed-top" style="
+    min-height: 2vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    border-bottom: 0.1vh solid #ccc;
+    background: #ECECEC;
+    background-color: #111;
+    z-index: 2;
+    ">
+    <img src="../../Images/unimed_cascavel.png" alt="">
+    <a class="navbar-brand" style="font-size:5vh;">UNIBUY</a>
+
+  </div>
+
   <form class="form-inline">
     <p>User ID</p>
   </form>
@@ -36,55 +43,63 @@
   <a href="ocorrencia.html">Ocorrências</a>
 </div>
 
-  <!-- Normal content  -->
-  <!-- Normal content  -->
-  <div class="container" style="position: relative; left:10%;">
+<!-- Normal content  -->
+<!-- Normal content  -->
+<div class="container" style="margin-left: 250px;">
 
-    <h1 align="justify">Solicitar Pedido</h1>
-    <form name="enviar">
+  <h1 align="justify">Solicitar Pedido</h1>
 
-      <div class="col-md-8">
-        <ul class="ul">
-          <li>
-            <div >
-              <label >Produto</label>
-              <input id='produtos' list="produtosDatalist" class="form-control" onchange="getProductId();" required>
-              <datalist id='produtosDatalist' >
-              </datalist>
-            </div>
-
-            <div>
-              <label>Quantidade</label>
-              <input id="quantidade" type="number" class="form-control" required>
-            </div>
-
-            <div >
-              <label>Prazo</label>
-
-              <input id="prazo" type="date" class="form-control" required>
-            </div>
-
+  <form id="requisicao" name="requisicao" action="#">
+    <div class="col-md-12" style="padding-left: 0px">
+      <ul class="ul" id='itemList'>
+        <li>
+          <div style="display:inline-block" class="col-md-6">
+            <label >Produto</label>
           </div>
-
-          <br>Descrição: <br><input id="obs" type="text" class="col-md-8" n ame="Descricao" style="height: 120px;"><br><br>
-          <button class="btn" type="button" name="button" onclick="solicitar();">Solicitar</button>
+          <div style="display:inline-block" class="col-md-2">
+            <label>Quantidade</label>
+          </div>
+          <div style="display:inline-block" class="col-md-3">
+            <label>Prazo</label>
+          </div>
         </li>
-      </ul>
-    </div>
+        <li id='item'>
+          <div style="display:inline-block; padding-left: 0px" class="col-md-6">
+            <input id='produtos' list="produtosDatalist" class="form-control" onchange="getProductId();" required=" ">
+            <datalist id='produtosDatalist' >
+            </datalist>
+          </div>
+          <div style="display:inline-block" class="col-md-2">
+            <input id="quantidade" type="number" class="form-control" required=" ">
+          </div>
+          <div style="display:inline-block" class="col-md-3">
+            <input id="prazo1" type="date" class="form-control" onchange="checkLimit(value, id)" required=" ">
+          </div>
+        </div>
+        <div class="col-md-11" style="padding-left: 0px">
+          <button class="btn btn-sm" form='none' style="width:inherit;height:inherit" name="button" onclick="addItem();">Adicionar Item</button>
+        </div>
+      </li>
+      <li>
+        <br>Observação: <br><input id="observacao" type="text" class="col-md-8" name="Descricao" style="height: 12vh;"><br><br>
+        <input value='Solicitar' form="requisicao" class="btn" type="button" name="button" onclick="solicitar()">
+      </li>
+    </ul>
+  </div>
+</form>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script><!-- Firebase App is always required and must be first -->
-    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-app.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script><!-- Firebase App is always required and must be first -->
+<script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-app.js"></script>
 
-    <!-- Add additional services that you want to use -->
-    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-messaging.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-functions.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="../../js/app.js">  </script>
+<!-- Add additional services that you want to use -->
+<script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-messaging.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-functions.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="../../js/app.js"></script>
+<script src="../../js/solicitacao.js"></script>
 
-    <script src="../../js/solicitacao.js"></script>
-
-  </body>
-  </html>
+</body>
+</html>
