--- a/Site_upload/HTML/formulario.html
+++ b/Site_upload/HTML/formulario.html
@@ -20,7 +20,7 @@
   background: #ECECEC;
   background-color: #111;
   z-index: 2;">
-  <img src="../../Images/unimed_cascavel.png" alt="">
+  <a href='home.html'><img src="../../Images/unimed_cascavel.png" alt=""></a>
   <a class="navbar-brand" style="font-size=80px;">UNIBUY</a>
   <form class="form-inline">
     <p>User ID</p>
@@ -33,6 +33,7 @@
   <a href="acompanhar.html">Acompanhar pedido</a>
   <a href="cadastro.html">Cadastro de produtos</a>
   <a href="ocorrencia.html">Ocorrências</a>
+  <a href="cotacao.html">Cotações</a>
 </div>
 
 <!-- Normal content  -->
@@ -53,8 +54,6 @@
           <input class="form-control" id="disabledInput" type="text" placeholder="dado BD" disabled>
           <label for="disabledSelect">Aberto Por</label>
           <input class="form-control" id="disabledInput" type="text" placeholder="dado BD" disabled>
-          <label for="disabledSelect">Descrição</label>
-          <input class="form-control" id="disabledInput" type="text" placeholder="dado BD"  style="padding:10%">
         </fieldset>
         <br>
         <div class="" style="display: flex; position: inline-block">
@@ -94,6 +93,8 @@
 
       <div class="col-lg-6" style="left: 1%">
         <div class="form-group">
+          <label for="disabledSelect">Área Responsável</label>
+          <input class="form-control" id="disabledInput" type="text" placeholder="dado BD" disabled>
           <label for="disabledSelect">Anexo</label>
           <input class="form-control" id="disabledInput" type="text" placeholder="dado BD" disabled>
 
