--- a/Site_upload/HTML/solicitacao.html
+++ b/Site_upload/HTML/solicitacao.html
@@ -13,26 +13,27 @@
 <body>
 
   <!-- Header -->
-  <div class="" style="display:inline-block">
-    <nav class="navbar navbar-light bg-light navbar-fixed-top" style="
-    min-height: 2vh;
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    border-bottom: 0.1vh solid #ccc;
-    background: #ECECEC;
-    background-color: #111;
-    z-index: 2;
-    ">
-    <img src="../../Images/unimed_cascavel.png" alt="">
-    <a class="navbar-brand" style="font-size:5vh;">UNIBUY</a>
-
-  </div>
-
+  <!-- Header -->
+  <nav class="navbar navbar-light bg-light navbar-fixed-top" style="min-height: 60px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  border-bottom: 1px solid #ccc;
+  background: #ECECEC;
+  background-color: #111;
+  z-index: 2;">
+  <a href='home.html'><img src="../../Images/unimed_cascavel.png" alt=""></a>
+  <a class="navbar-brand" style="font-size=80px;">UNIBUY</a>
   <form class="form-inline">
     <p>User ID</p>
   </form>
+</nav>
+</div>
+
+<form class="form-inline">
+  <p>User ID</p>
+</form>
 </nav>
 
 
@@ -41,6 +42,7 @@
   <a href="acompanhar.html">Acompanhar pedido</a>
   <a href="cadastro.html">Cadastro de produtos</a>
   <a href="ocorrencia.html">Ocorrências</a>
+  <a href="cotacao.html">Cotações</a>
 </div>
 
 <!-- Normal content  -->
