--- a/Site_upload/HTML/home.html
+++ b/Site_upload/HTML/home.html
@@ -6,9 +6,13 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="../CSS/main2.css">
   <link rel="stylesheet" href="../CSS/sidebar.css">
+
 </head>
 <body>
+
+  <!-- Header -->
   <!-- Header -->
   <nav class="navbar navbar-light bg-light navbar-fixed-top" style="min-height: 60px;
   position: fixed;
@@ -25,6 +29,12 @@
     <p>User ID</p>
   </form>
 </nav>
+</div>
+
+<form class="form-inline">
+  <p>User ID</p>
+</form>
+</nav>
 
 
 <div id="mysidenavxD" style="width: 250px; marginLeft: 250px;" class="sidenavxD">
@@ -33,46 +43,6 @@
   <a href="cadastro.html">Cadastro de produtos</a>
   <a href="ocorrencia.html">Ocorrências</a>
   <a href="cotacao.html">Cotações</a>
-</div>
-<!-- Normal content  -->
-<div class="" style="padding: 20px 0px 0px 260px;display: flex; position: inline-block">
-  <!-- Código -->
-  <div class="">
-    <label>Código</label><br>
-    <input type="text" class="form-control" placeholder="Cod." readonly>
-  </div>
-  <!-- Descrição -->
-  <div class="">
-    <label>Descrição</label><br>
-    <input type="text" class="form-control" placeholder="Descrição">
-  </div>
-  <!-- Unidade de Medida -->
-  <div class="">
-    <label>Unidade de Medida</label>
-    <input id='UM' list="UMDatalist" class="form-control">
-    <datalist id='produtosDatalist'>
-    </datalist>
-  </div>
-
-  <!-- Grupo -->
-  <div class="">
-    <label>Grupo</label><br>
-    <input id='DOIS' list="DOISDatalist" class="form-control">
-    <datalist id='gruposDatalist'>
-    </datalist>
-  </div>
-
-  <!-- Grupo -->
-  <div class="">
-    <label>Cont.</label><br>
-    <input id='TRES' list="TRESDatalist" class="form-control">
-    <datalist id='contDatalist'>
-    </datalist>
-  </div>
-
-  <!-- Salvar Cadastro -->
-  <br>
-  <button type="button" name="button" placeholder="SalvarCadastro" style="padding-right: : 50%" > Salvar Cadastro! </button>
 </div>
 
 </body>
