--- a/Site_upload/HTML/ranking.html
+++ b/Site_upload/HTML/ranking.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="../CSS/sidebar.css">
+  <style media="screen">
+  td:hover{
+    background-color: #4CAF50;
+    color: white;
+  }
+  </style>
 </head>
 <body>
   <!-- Header -->
@@ -40,37 +46,55 @@
 <div id="page-wrapper" style="margin-left: 250px;" class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Chamados</h1>
-      <select class="custom-select" id="inputGroupSelect02">
-        <option selected>Setores...</option>
-        <option value="1">TI</option>
-        <option value="2">SUP</option>
-        <option value="3">Outros..</option>
-      </select>
-      <br><button type="button" class="btn btn-primary" placeholder="Novo" style="padding-right: : 50%" > Novo </button>
-      <button type="button" class="btn btn-primary" placeholder="Aberto" style="padding-right: : 30%"> Aberto </button>
-      <button type="button" class="btn btn-primary" placeholder="Curso" style="padding-right: : 30%"> Em Curso </button>
-      <button type="button" class="btn btn-primary" placeholder="Fechado" style="padding-right: : 30%"> Fechado </button>
+      <h1 class="page-header">Ranking</h1>
     </div>
     <!-- /.col-lg-12 -->
   </div>
-  <br>
   <!-- /.row -->
   <div class="row">
     <div class="col-lg-12">
       <div class="panel panel-default">
         <!-- /.panel-heading -->
         <div class="panel-body">
-          <table width="100%" class="table table-striped table-bordered table-hover" id="datatables">
+          <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
             <thead>
               <tr style="background-color: #4CAF50;color: white;">
-                <th>Setor</th>
-                <th>Prazo de entrega</th>
-                <th>Solicitante</th>
-                <th>Responsável</th>
+                <th>N°Produto</th>
+                <th>Produto</th>
+                <th>Lançado</th>
+                <th>Fornecedor</th>
+                <th>Preço</th>
+
               </tr>
             </thead>
+            <tbody>
+              <tr class="odd gradeX">
+                <td onclick="efetuar();">1</td><script type="text/javascript">function efetuar(){window.alert("Enviado para o financeiro!");}</script>
+                <td>Caderno</td>
+                <td>22/05/2018</td>
+                <td>Schuster</td>
+                <td >12,50</td>
+
+              </tr>
+              <tr class="odd gradeX">
+                <td><a href="">1</a></td>
+                <td>Caderno</td>
+                <td>23/05/2018</td>
+                <td>Papelaria Fut</td>
+                <td >12,99</td>
+
+              </tr>
+              <tr class="odd gradeX">
+                <td><a href="">1</a></td>
+                <td>Caderno</td>
+                <td>24/05/2018</td>
+                <td>Materias Escolares Zuzu</td>
+                <td >13,00</td>
+
+              </tr>
+            </tbody>
           </table>
+
         </div>
         <!-- /.panel-body -->
       </div>
@@ -81,17 +105,5 @@
   <!-- /.row -->
   <div class="row">
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script><!-- Firebase App is always required and must be first -->
-    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-app.js"></script>
-
-    <!-- Add additional services that you want to use -->
-    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-messaging.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-functions.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="../../js/app.js">  </script>
-    <script src="../../js/acompanhar.js"></script>
   </body>
   </html>
