--- a/public/acompanhar.html
+++ b/public/acompanhar.html
@@ -12,7 +12,7 @@
 <body>
 
   <!-- Header -->
-  <nav class="navbar navbar-light bg-light" style="background-color: #32F288">
+  <nav class="navbar navbar-light bg-light" style="background-color: #32F288;">
     <img src="../Images/unimed_cascavel.png" alt="">
     <a class="navbar-brand" style="font-size=80px;">UNIBUY</a>
     <form class="form-inline">
@@ -69,7 +69,6 @@
                   <th>Prazo de entrega</th>
                   <th>Solicitante</th>
                   <th>Responsável</th>
-
                 </tr>
               </thead>>
             </table>
