--- a/Site_upload/HTML/cotacao.html
+++ b/Site_upload/HTML/cotacao.html
@@ -31,7 +31,6 @@
   <a href="solicitacao.html">Solicitar pedido</a>
   <a href="acompanhar.html">Acompanhar pedido</a>
   <a href="cadastro.html">Cadastro de produtos</a>
-  <a href="ocorrencia.html">Ocorrências</a>
   <a href="cotacao.html">Cotações</a>
 </div>
 
@@ -78,45 +77,45 @@
             </thead>
             <tbody>
               <tr class="odd gradeX">
-                <td><a href="ranking.html">1</a></td>
-                <td>Caderno</td>
-                <td>22/05/2018</td>
-                <td>15/06/2018</td>
-                <td>3</td>
-                <td>12.50</td>
+                <td onclick="efetuar();">1</td><script>function efetuar(){location.href="ranking.html"}</script>
+                <td onclick="efetuar();">Caderno</td>
+                <td onclick="efetuar();">22/05/2018</td>
+                <td onclick="efetuar();">15/06/2018</td>
+                <td onclick="efetuar();">3</td>
+                <td onclick="efetuar();">12.50</td>
               </tr>
               <tr class="odd gradeX">
-                <td><a href="ranking.html">1</a></td>
-                <td>Estojo</td>
-                <td>22/05/2018</td>
-                <td>15/06/2018</td>
-                <td>0</td>
-                <td>0</td>
+                <td onclick="efetuar();">1</td>
+                <td onclick="efetuar();">Estojo</td>
+                <td onclick="efetuar();">22/05/2018</td>
+                <td onclick="efetuar();">15/06/2018</td>
+                <td onclick="efetuar();">0</td>
+                <td onclick="efetuar();">0</td>
               </tr>
               <tr class="odd gradeX">
-                <td><a href="ranking.html">1</a></td>
-                <td>Borracha</td>
-                <td>22/05/2018</td>
-                <td>15/06/2018</td>
-                <td >0</td>
-                <td>0</td>
+                <td onclick="efetuar();">1</td>
+                <td onclick="efetuar();">Borracha</td>
+                <td onclick="efetuar();">22/05/2018</td>
+                <td onclick="efetuar();">15/06/2018</td>
+                <td onclick="efetuar();" >0</td>
+                <td onclick="efetuar();">0</td>
 
                 <tr class="odd gradeX">
-                  <td><a href="ranking.html">1</a></td>
-                  <td>Lapís</td>
-                  <td>22/05/2018</td>
-                  <td>15/06/2018</td>
-                  <td >0</td>
-                  <td>0</td>
+                  <td onclick="efetuar();">1</td>
+                  <td onclick="efetuar();">Lapís</td>
+                  <td onclick="efetuar();">22/05/2018</td>
+                  <td onclick="efetuar();">15/06/2018</td>
+                  <td onclick="efetuar();">0</td>
+                  <td onclick="efetuar();">0</td>
 
                 </tr>
                 <tr class="odd gradeX">
-                  <td><a href="ranking.html">1</a></td>
-                  <td>Post it</td>
-                  <td>22/05/2018</td>
-                  <td>15/06/2018</td>
-                  <td >0</td>
-                  <td>0</td>
+                  <td onclick="efetuar();">1</td>
+                  <td onclick="efetuar();">Post it</td>
+                  <td onclick="efetuar();">22/05/2018</td>
+                  <td onclick="efetuar();">15/06/2018</td>
+                  <td onclick="efetuar();">0</td>
+                  <td onclick="efetuar();">0</td>
 
                 </tr>
                 <tr class="odd gradeX">
