--- a/Site_upload/HTML/ranking.html
+++ b/Site_upload/HTML/ranking.html
@@ -37,7 +37,6 @@
   <a href="solicitacao.html">Solicitar pedido</a>
   <a href="acompanhar.html">Acompanhar pedido</a>
   <a href="cadastro.html">Cadastro de produtos</a>
-  <a href="ocorrencia.html">Ocorrências</a>
   <a href="cotacao.html">Cotações</a>
 </div>
 
@@ -70,10 +69,10 @@
             <tbody>
               <tr class="odd gradeX">
                 <td onclick="efetuar();">1</td><script type="text/javascript">function efetuar(){window.alert("Enviado para o financeiro!");}</script>
-                <td>Caderno</td>
-                <td>22/05/2018</td>
-                <td>Schuster</td>
-                <td >12,50</td>
+                <td onclick="efetuar();">Caderno</td>
+                <td onclick="efetuar();">22/05/2018</td>
+                <td onclick="efetuar();">Schuster</td>
+                <td onclick="efetuar();" >12,50</td>
 
               </tr>
               <tr class="odd gradeX">
