--- a/Site_upload/HTML/solicitacao.html
+++ b/Site_upload/HTML/solicitacao.html
@@ -8,7 +8,11 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="../CSS/main2.css">
   <link rel="stylesheet" href="../CSS/sidebar.css">
-
+  <!-- <style media="screen">
+  .sidenavxD{
+    background-color: rgba(19, 206, 102,0.30);
+  }
+  </style> -->
 </head>
 <body>
 
@@ -41,7 +45,6 @@
   <a href="solicitacao.html">Solicitar pedido</a>
   <a href="acompanhar.html">Acompanhar pedido</a>
   <a href="cadastro.html">Cadastro de produtos</a>
-  <a href="ocorrencia.html">Ocorrências</a>
   <a href="cotacao.html">Cotações</a>
 </div>
 
