--- a/Site_upload/HTML/acompanhar.html
+++ b/Site_upload/HTML/acompanhar.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="../CSS/sidebar.css">
+  <style media="screen">
+  td:hover{
+    background-color: #4CAF50;
+    color: white;
+  }
+
+  </style>
 </head>
 <body>
   <!-- Header -->
@@ -31,7 +38,6 @@
   <a href="solicitacao.html">Solicitar pedido</a>
   <a href="acompanhar.html">Acompanhar pedido</a>
   <a href="cadastro.html">Cadastro de produtos</a>
-  <a href="ocorrencia.html">Ocorrências</a>
   <a href="cotacao.html">Cotações</a>
 </div>
 
@@ -52,31 +58,6 @@
       <button type="button" class="btn btn-primary" placeholder="Curso" style="padding-right: : 30%"> Em Curso </button>
       <button type="button" class="btn btn-primary" placeholder="Fechado" style="padding-right: : 30%"> Fechado </button>
     </div>
-<<<<<<< HEAD
-    <!-- /.row -->
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            Chamados
-          </div>
-          <!-- /.panel-heading -->
-          <div class="panel-body">
-            <table width="100%" class="table table-striped table-bordered table-hover" id="datatables">
-              <thead>
-                <tr>
-                  <th>Setor</th>
-                  <th>Prazo de entrega</th>
-                  <th>Solicitante</th>
-                  <th>Responsável</th>
-
-                </tr>
-              </thead>
-            </table>
-
-          </div>
-          <!-- /.panel-body -->
-=======
     <!-- /.col-lg-12 -->
   </div>
   <br>
@@ -96,7 +77,6 @@
               </tr>
             </thead>
           </table>
->>>>>>> ef67b1ab95e8504b0173de366a9c2879675f7ecf
         </div>
         <!-- /.panel-body -->
       </div>
