--- a/Site_upload/HTML/ocorrencia.html
+++ b/Site_upload/HTML/ocorrencia.html
@@ -49,7 +49,9 @@
   <div class="col-lg-6" style="left: 1%">
 
     <form role="form" action="">
-      <fieldset disabled>
+      <fieldset>
+        <select id='produtos' list="produtosDatalist" class="col-lg-2 form-control" onchange="getProductId();"></select>
+        <datalist id='produtosDatalist'></datalist>
         <div class="form-group">
           <label for="disabledSelect">Numero Pedido</label>
           <input class="form-control" id="disabledInput" type="text" placeholder="dado BD" disabled>
@@ -85,7 +87,7 @@
           </select>
         </div>
 
-        <button type="button" name="button" onclick="funcao()">Enviar</button>
+        <button type="button" class="btn btn-success" style="padding-right: : 50%"> Enviar</button>
       </div>
       <footer>
       </footer>
