--- a/public/ocorrencia.html
+++ b/public/ocorrencia.html
@@ -55,13 +55,24 @@
           <input class="form-control" id="numero" type="text" placeholder="dado BD" disabled>
           <label for="disabledSelect">Data</label>
           <input class="form-control" id="data" type="text" placeholder="dado BD" disabled>
-          <label for="disabledSelect">Prazo</label>
-          <input class="form-control" id="prazo" type="text" placeholder="dado BD" disabled>
           <label for="disabledSelect">Aberto Por</label>
           <input class="form-control" id="solicitante" type="text" placeholder="dado BD" disabled>
         </fieldset>
-        <label for="disabledSelect">Descrição</label>
-        <input class="form-control" id="observacao" type="text" placeholder="dado BD"  style="padding:10%">
+
+        <label for="disabledSelect">Produtos</label>
+        <div class="md-col-12">
+          <table class="table table-hover" id='produtos'>
+            <th>
+              Produto
+            </th>
+            <th>
+              Prazo
+            </th>
+            <th>
+              Quantidade
+            </th>
+          </table>
+        </div>
 
 
         <div class="form-group">
